--- a/_sources/Projects/USMedicalInsuranceCosts.ipynb
+++ b/_sources/Projects/USMedicalInsuranceCosts.ipynb
@@ -4,13 +4,261 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# U.S. Medical Insurance Costs"
+    "# U.S. Medical Insurance Costs\n",
+    "## Aim\n",
+    "The aim of this project is to explore the U.S. Medical Insurance Costs data set and understand how different factors impact the charges.\n",
+    "## Project Goals\n",
+    "The goals of this project are:\n",
+    "- Determine which gender has the highest average charge\n",
+    "- Determine which region has the highest average charge\n",
+    "- Determine the relationship between BMI and charges"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis\n",
+    "This section will analyse the data included in the data set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1338 entries, 0 to 1337\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   age       1338 non-null   int64  \n",
+      " 1   sex       1338 non-null   object \n",
+      " 2   bmi       1338 non-null   float64\n",
+      " 3   children  1338 non-null   int64  \n",
+      " 4   smoker    1338 non-null   object \n",
+      " 5   region    1338 non-null   object \n",
+      " 6   charges   1338 non-null   float64\n",
+      "dtypes: float64(2), int64(2), object(3)\n",
+      "memory usage: 73.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "path = '../data/insurance.csv'\n",
+    "\n",
+    "df = pd.read_csv(path)\n",
+    "\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>children</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>region</th>\n",
+       "      <th>charges</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1338.000000</td>\n",
+       "      <td>1338</td>\n",
+       "      <td>1338.000000</td>\n",
+       "      <td>1338.000000</td>\n",
+       "      <td>1338</td>\n",
+       "      <td>1338</td>\n",
+       "      <td>1338.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>676</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1064</td>\n",
+       "      <td>364</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>39.207025</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30.663397</td>\n",
+       "      <td>1.094918</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13270.422265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>14.049960</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.098187</td>\n",
+       "      <td>1.205493</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12110.011237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15.960000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1121.873900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>26.296250</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4740.287150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>39.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30.400000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9382.033000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.693750</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16639.912515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>64.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>53.130000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>63770.428010</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                age   sex          bmi     children smoker     region  \\\n",
+       "count   1338.000000  1338  1338.000000  1338.000000   1338       1338   \n",
+       "unique          NaN     2          NaN          NaN      2          4   \n",
+       "top             NaN  male          NaN          NaN     no  southeast   \n",
+       "freq            NaN   676          NaN          NaN   1064        364   \n",
+       "mean      39.207025   NaN    30.663397     1.094918    NaN        NaN   \n",
+       "std       14.049960   NaN     6.098187     1.205493    NaN        NaN   \n",
+       "min       18.000000   NaN    15.960000     0.000000    NaN        NaN   \n",
+       "25%       27.000000   NaN    26.296250     0.000000    NaN        NaN   \n",
+       "50%       39.000000   NaN    30.400000     1.000000    NaN        NaN   \n",
+       "75%       51.000000   NaN    34.693750     2.000000    NaN        NaN   \n",
+       "max       64.000000   NaN    53.130000     5.000000    NaN        NaN   \n",
+       "\n",
+       "             charges  \n",
+       "count    1338.000000  \n",
+       "unique           NaN  \n",
+       "top              NaN  \n",
+       "freq             NaN  \n",
+       "mean    13270.422265  \n",
+       "std     12110.011237  \n",
+       "min      1121.873900  \n",
+       "25%      4740.287150  \n",
+       "50%      9382.033000  \n",
+       "75%     16639.912515  \n",
+       "max     63770.428010  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(include='all')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -24,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
