--- a/_sources/Projects/USMedicalInsuranceCosts.ipynb
+++ b/_sources/Projects/USMedicalInsuranceCosts.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "max     63770.428010  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -322,48 +322,64 @@
       "text/html": [
        "\n",
        "<style> \n",
-       "body {\n",
-       "    background-color: #000000\n",
-       "}\n",
        "#metrics {\n",
        "    width: 95%;\n",
        "    margin: 20px auto;\n",
+       "    font-family: arial, sans-serif;\n",
        "    display: flex;\n",
-       "    justify-content: space-around;\n",
+       "    flex-direction: column;\n",
+       "    text-align: center;\n",
+       "}\n",
+       "h1 {\n",
+       "    font-size: 2em;\n",
+       "    font-weight: 400;\n",
+       "    margin: 20px auto;\n",
+       "    color: ##32292f;\n",
+       "}\n",
+       "h2 {\n",
+       "    font-size: 1.5em;\n",
+       "    font-weight: 400;\n",
+       "    color: #32292f;\n",
+       "}\n",
+       "h3 {\n",
+       "    font-size: 1.2em;\n",
+       "    font-weight: 400;\n",
+       "    color: #32292f;\n",
+       "}\n",
+       ".metrics-box {\n",
+       "    height: 100px;\n",
+       "    display: flex;\n",
+       "    flex-direction: row;\n",
+       "    justify-content: center;\n",
        "    align-items: center;\n",
+       "    column-gap: 10px;\n",
        "}\n",
-       ".head {\n",
-       "    padding: 15px;\n",
-       "    font-size: 30px;\n",
-       "    color: #32292f;\n",
-       "}\n",
-       ".sub-text {\n",
-       "    padding: 5px;\n",
-       "    font-size: 25px;\n",
-       "    color: #32292f;\n",
-       "}\n",
-       ".container {\n",
-       "  border-radius: 15px 50px;\n",
-       "  background: #89a1ef;\n",
-       "  padding: 20px;\n",
-       "  width: 200px;\n",
-       "  height: 150px;\n",
-       "  display: flex;\n",
-       "  justify-content: center;\n",
-       "  flex-direction: column;\n",
-       "  align-items: center;\n",
+       ".metric-box {\n",
+       "    margin: 0 auto;\n",
+       "    background-color: #99e1d9;\n",
+       "    border-radius: 15px 50px 30px;\n",
+       "    display: inline-block;\n",
+       "    padding: 20px;\n",
+       "    margin: 10px;\n",
+       "    text-align: center;\n",
+       "    width: 200px;\n",
+       "    height: 150px;\n",
        "}\n",
        "</style>\n",
        "\n",
        "<div id=\"metrics\">\n",
-       "    <div class=\"container\">\n",
-       "    <div class=\"sub-text\">Female Charges</div>\n",
-       "        <div class=\"head\">$12569.58</div>\n",
+       "    <h1>Metrics</h1>\n",
+       "    <div class=\"metrics-box\">\n",
+       "        <div class=\"metric-box\">\n",
+       "            <h3 class=\"sub-text\">Female Charges</h3>\n",
+       "            <h2 class=\"head\">$12569.58</h2>\n",
+       "        </div>\n",
+       "        <div class=\"metric-box\">\n",
+       "            <h3 class=\"sub-text\">Male Charges</h3>\n",
+       "            <h2 class=\"head\">$13956.75</h2>\n",
+       "        </div>    \n",
        "    </div>\n",
-       "    <div class=\"container\">\n",
-       "        <div class=\"head\">Male Charges</div>\n",
-       "        <div class=\"head\">$13956.75</div>\n",
-       "    </div>\n",
+       "\n",
        "</div>\n"
       ],
       "text/plain": [
