--- a/_sources/Projects/BillboardData.ipynb
+++ b/_sources/Projects/BillboardData.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -25,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ran on: 22/11/2022\n"
+      "Ran on: 24/11/2022\n"
      ]
     }
    ],
@@ -43,122 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hot-100 chart from 2022-11-26\n",
-      "-----------------------------\n",
-      "1. 'Anti-Hero' by Taylor Swift\n",
-      "2. 'Rich Flex' by Drake & 21 Savage\n",
-      "3. 'Unholy' by Sam Smith & Kim Petras\n",
-      "4. 'Bad Habit' by Steve Lacy\n",
-      "5. 'As It Was' by Harry Styles\n",
-      "6. 'Major Distribution' by Drake & 21 Savage\n",
-      "7. 'I'm Good (Blue)' by David Guetta & Bebe Rexha\n",
-      "8. 'Lift Me Up' by Rihanna\n",
-      "9. 'Spin Bout U' by Drake & 21 Savage\n",
-      "10. 'On BS' by Drake & 21 Savage\n",
-      "11. 'Super Freaky Girl' by Nicki Minaj\n",
-      "12. 'Die For You' by The Weeknd\n",
-      "13. 'You Proof' by Morgan Wallen\n",
-      "14. 'Circo Loco' by Drake & 21 Savage\n",
-      "15. 'Pussy & Millions' by Drake & 21 Savage Featuring Travis Scott\n",
-      "16. 'I Like You (A Happier Song)' by Post Malone Featuring Doja Cat\n",
-      "17. 'Under The Influence' by Chris Brown\n",
-      "18. 'Vegas' by Doja Cat\n",
-      "19. 'Something In The Orange' by Zach Bryan\n",
-      "20. 'Cuff It' by Beyonce\n",
-      "21. 'Lavender Haze' by Taylor Swift\n",
-      "22. 'Privileged Rappers' by Drake & 21 Savage\n",
-      "23. 'Wasted On You' by Morgan Wallen\n",
-      "24. 'I Ain't Worried' by OneRepublic\n",
-      "25. 'All I Want For Christmas Is You' by Mariah Carey\n",
-      "26. 'BackOutsideBoyz' by Drake\n",
-      "27. 'Jimmy Cooks' by Drake Featuring 21 Savage\n",
-      "28. 'Sunroof' by Nicky Youre & dazy\n",
-      "29. 'Tomorrow 2' by GloRilla & Cardi B\n",
-      "30. 'Wait For U' by Future Featuring Drake & Tems\n",
-      "31. 'She Had Me At Heads Carolina' by Cole Swindell\n",
-      "32. 'Titi Me Pregunto' by Bad Bunny\n",
-      "33. 'Midnight Rain' by Taylor Swift\n",
-      "34. 'Broke Boys' by Drake & 21 Savage\n",
-      "35. 'Bejeweled' by Taylor Swift\n",
-      "36. 'The Kind Of Love We Make' by Luke Combs\n",
-      "37. 'Hours In Silence' by Drake & 21 Savage\n",
-      "38. 'About Damn Time' by Lizzo\n",
-      "39. 'Maroon' by Taylor Swift\n",
-      "40. 'Made You Look' by Meghan Trainor\n",
-      "41. 'Rockin' Around The Christmas Tree' by Brenda Lee\n",
-      "42. 'Golden Hour' by JVKE\n",
-      "43. 'Thank God' by Kane Brown With Katelyn Brown\n",
-      "44. 'Unstoppable' by Sia\n",
-      "45. 'Karma' by Taylor Swift\n",
-      "46. 'Hold Me Closer' by Elton John & Britney Spears\n",
-      "47. 'Just Wanna Rock' by Lil Uzi Vert\n",
-      "48. 'You're On Your Own, Kid' by Taylor Swift\n",
-      "49. 'Snow On The Beach' by Taylor Swift Featuring Lana Del Rey\n",
-      "50. 'Jingle Bell Rock' by Bobby Helms\n",
-      "51. 'Wait In The Truck' by HARDY Featuring Lainey Wilson\n",
-      "52. 'Jumbotron Shit Poppin' by Drake\n",
-      "53. 'Half Of Me' by Thomas Rhett Featuring Riley Green\n",
-      "54. 'Fall In Love' by Bailey Zimmerman\n",
-      "55. 'Shirt' by SZA\n",
-      "56. 'Until I Found You' by Stephen Sanchez\n",
-      "57. 'Rock And A Hard Place' by Bailey Zimmerman\n",
-      "58. 'Treacherous Twins' by Drake & 21 Savage\n",
-      "59. 'Hotel Lobby (Unc And Phew)' by Quavo & Takeoff\n",
-      "60. 'What My World Spins Around' by Jordan Davis\n",
-      "61. 'Victoria’s Secret' by Jax\n",
-      "62. 'Vigilante Shit' by Taylor Swift\n",
-      "63. 'Son Of A Sinner' by Jelly Roll\n",
-      "64. 'Star Walkin' (League Of Legends Worlds Anthem)' by Lil Nas X\n",
-      "65. 'Question...?' by Taylor Swift\n",
-      "66. 'Don't Come Lookin'' by Jackson Dean\n",
-      "67. 'Middle Of The Ocean' by Drake\n",
-      "68. 'Romantic Homicide' by d4vd\n",
-      "69. 'More M’s' by Drake & 21 Savage\n",
-      "70. 'Mastermind' by Taylor Swift\n",
-      "71. 'Billie Eilish.' by Armani White\n",
-      "72. 'Die For You' by Joji\n",
-      "73. 'Labyrinth' by Taylor Swift\n",
-      "74. 'Whiskey On You' by Nate Smith\n",
-      "75. 'Free Mind' by Tems\n",
-      "76. 'California Breeze' by Lil Baby\n",
-      "77. 'Sweet Nothing' by Taylor Swift\n",
-      "78. 'Heyy' by Lil Baby\n",
-      "79. 'No Se Va' by Grupo Frontera\n",
-      "80. 'Would've, Could've, Should've' by Taylor Swift\n",
-      "81. 'I Guess It's Fuck Me' by Drake\n",
-      "82. 'Calm Down' by Rema & Selena Gomez\n",
-      "83. 'All Mine' by Brent Faiyaz\n",
-      "84. 'Freestyle' by Lil Baby\n",
-      "85. 'Country On' by Luke Bryan\n",
-      "86. 'Heart Like A Truck' by Lainey Wilson\n",
-      "87. 'Miss You' by Oliver Tree & Robin Schulz\n",
-      "88. 'Wishful Drinking' by Ingrid Andress With Sam Hunt\n",
-      "89. 'Music For A Sushi Restaurant' by Harry Styles\n",
-      "90. 'Pick Me Up' by Gabby Barrett\n",
-      "91. 'Break My Heart' by Rod Wave\n",
-      "92. 'La Bachata' by Manuel Turizo\n",
-      "93. 'Forever' by Lil Baby Featuring Fridayy\n",
-      "94. 'Last Last' by Burna Boy\n",
-      "95. '3AM On Glenwood' by 21 Savage\n",
-      "96. 'The Great War' by Taylor Swift\n",
-      "97. 'Gotta Move On' by Diddy & Bryson Tiller\n",
-      "98. 'Forget Me' by Lewis Capaldi\n",
-      "99. 'Going, Going, Gone' by Luke Combs\n",
-      "100. 'Bigger Than The Whole Sky' by Taylor Swift\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "currentHot100 = billboard.ChartData('hot-100')\n",
-    "\n",
-    "print(currentHot100)"
+    "currentHot100 = billboard.ChartData('hot-100')"
    ]
   },
   {
@@ -793,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
