--- a/_sources/Projects/BillboardData.ipynb
+++ b/_sources/Projects/BillboardData.ipynb
@@ -451,7 +451,7 @@
     }
    ],
    "source": [
-    "df.sort_values(by='weeks', ascending=False)\n"
+    "hot100DF.sort_values(by='weeks', ascending=False)\n"
    ]
   },
   {
@@ -472,7 +472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def all_entries_last_10_years(chartName):   \n",
+    "def all_entries_last_10_years(chartName):\n",
     "    currentDate = date.today()\n",
     "    tenYearCharts = []\n",
     "    for i in range(1, 10):\n",
@@ -794,7 +794,7 @@
     }
    ],
    "source": [
-    "print(billboard.ChartData('korea'))"
+    "print(billboard.ChartData('korea'))\n"
    ]
   }
  ],
